# slide-image-utils

./: .gitignore  LICENSE  README.md  backup_setup.cfg  mkdocs.yml  pyproject.toml  requirements.txt  requirements.yml
doc/: doc.md
docs/: detection.md  index.md  postproc.md  vis.md
docs/argdown_outputs/: argdown_create_40x_montages.md  argdown_create_gallery.md  argdown_create_montages.md  argdown_detect_LEVs.md  argdown_detect_PACCs.md  argdown_detect_cells.md  argdown_extract_closest_events.md  argdown_extract_event_images.md  argdown_extract_hdf_features.md  argdown_extract_morphs.md  argdown_filter_hdf.md  argdown_merge_hdf.md  argdown_sort_hdf.md
main/: detect_PACCs.py  detect_cells.py
main/dev/: _detect_event.ipynb  _preview_image.ipynb
main/script/: process_slide_jpeg.sh  script_2.sh
main/tools/: calc_plls.py  query_40x_images.py
main/utils/hdf_utils/: merge_hdf.py
main/vis/: create_gallery.py
script/: append_frame_coords.R  generate_3_well_focal_point_coords.py  if_utils.py  plotSlideHeatmap.R  query_slide_info.R
scripts/: plotSlideHeatmap.R
slide_image_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
slideutils/: detect_LEVs.py  detect_PACCs.py  detect_cells.py
slideutils/dev/: _detect_event.ipynb  events.py  if_utils.py  maskCell.py  postprocess_for_reimaging.py  preprocess_for_reimaging.py  query_40x_images.py  visualize_image.py
slideutils/script/: copy_frame_images.py  process_slide_tiff.sh
slideutils/slide_image_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
slideutils/tools/: calc_event_hist.py  calc_min_dist.py  calc_plls.py  calc_slide_hist.py  convert_8bit_to_16bit.py  convert_channels_to_composite_image.py  convert_jpg_to_tif.py  count_spots.py  extract_closest_events.py  extract_event_images.py  extract_hdf_features.py  extract_morphs.py  query_40x_images.py  transform_event_coords.py
slideutils/tools/hdf_tools/: filter_hdf.py  merge_hdf.py  sort_hdf.py
slideutils/utils/: frame.py  utils.py
slideutils/vis/: create_40x_montages.py  create_gallery.py  create_montages.py  plot_slide_heatmap.R
src/: 8_to_16.py  analyze_40x_WBC.sh  calc_image_hist.py  calc_min_dist.py  classes.py  commands.sh  create_40x_montages.py  create_gallery.py  create_montages.py  detectEVs.py  detect_LEVs.py  detect_LEVs_2.py  detect_events.py  detect_events_with_nuclei.py  extract_event_hist.py  extract_event_images.py  extract_features.py  filter_hdf.py  get10xfeatures.py  if_utils.py  maskCell.py  merge_hdf.py  noise.py  postprocess_for_reimaging.py  preprocess_for_reimaging.py  segmentWBCs.py  send_to_reimaging.py  sort_hdf.py  utils.py  visualize_image.py
tests/find_closest_events/: t1_output.txt  t1_query.txt  t1_reference.txt  t1_test.txt
