[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-image-utils"
description = "A package for processing single cell IF microscopy image data"
authors = [
	{name = "Amin Naghdloo", email = "naghdloo@usc.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
	"h5py == 3.11.0",
	"opencv-python == 4.5.3.56",
	"scikit-image == 0.19.1",
	"numpy == 1.22.4",
	"pandas == 1.3.5",
	"scipy == 1.7.3",
	"matplotlib == 3.5.1"
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3"
]

[project.scripts]
siu_detect_cells = "slideutils.detect_cells:main"
siu_detect_LEVs = "slideutils.detect_LEVs:main"
siu_detect_PACCs = "slideutils.detect_PACCs:main"
siu_extract_event_images = "slideutils.tools.extract_event_images:main"
siu_extract_more_features = "slideutils.tools.extract_morphs:main"
siu_extract_hdf_features = "slideutils.tools.extract_hdf_features:main"
siu_extract_closest_events = "slideutils.tools.extract_closest_events:main"
siu_query_40x_montages = "slideutils.tools.query_40x_images:main"
siu_filter_hdf = "slideutils.tools.hdf_tools.filter_hdf:main"
siu_merge_hdf = "slideutils.tools.hdf_tools.merge_hdf:main"
siu_sort_hdf = "slideutils.tools.hdf_tools.sort_hdf:main"
siu_create_gallery = "slideutils.vis.create_gallery:main"
siu_create_montages = "slideutils.vis.create_montages:main"
siu_create_40x_montages = "slideutils.vis.create_40x_montages:main"

[project.urls]
Repository = "https://github.com/aminnaghdloo/slide-image-utils.git"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests", "slideutils/dev", "slideutils/script"]

[tool.setuptools_scm]